# agentic-startup-studio

./: .containerignore  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.js  .releaserc.json  ARCHITECTURE.md  AUTONOMOUS_BACKLOG.md  AUTONOMOUS_DEVELOPMENT_PROGRESS_REPORT.md  AUTONOMOUS_DEVELOPMENT_SESSION_REPORT.md  AUTONOMOUS_DEVELOPMENT_SESSION_REPORT_LATEST.md  AUTONOMOUS_EXECUTION_COMPLETE.md  AUTONOMOUS_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_DEPLOYMENT_GUIDE.md  AUTONOMOUS_SDLC_ENHANCEMENT_SUMMARY_2025.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_ENHANCEMENT_REPORT.md  AUTONOMOUS_SDLC_FINAL_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_IMPLEMENTATION_GUIDE.md  AUTONOMOUS_SDLC_FINAL_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_GENERATION_4_FINAL_REPORT.md  AUTONOMOUS_SDLC_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_SDLC_MATURITY_ASSESSMENT_REPORT.md  AUTONOMOUS_SDLC_METRICS.json  AUTONOMOUS_SDLC_PRODUCTION_DEPLOYMENT_GUIDE.md  AUTONOMOUS_SDLC_V4_DEPLOYMENT_GUIDE.md  AUTONOMOUS_SDLC_V4_FINAL_EXECUTION_REPORT.md  AUTONOMOUS_TEST_COVERAGE_REPORT.md  AUTONOMOUS_VALUE_BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY_AUTONOMOUS_SDLC.md  (+106 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh  setup.sh
.github/: dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  infrastructure_issue.md  performance_issue.md  security_report.md
.github/workflows/: ci-enhanced.yml  ci.yml  performance-monitoring.yml  release.yml  security-advanced.yml  security-audit.yml
.terragon/: README.md  autonomous-execution-scheduler.sh  config.yaml  value-discovery-engine.py  value-metrics.json
DOCS/: autonomous_backlog_execution_report.md  backlog.yml
agents/: __init__.py  loader.py  multi_agent_workflow.py
agents/founders/: ceo.yaml  cto.yaml  vp_rd.yaml
agents/investors/: angel.yaml  vc.yaml
agents/marketing/: growth.yaml
configs/: __init__.py
core/: ad_budget_sentinel.py  ads_manager.py  alert_manager.py  alert_service.py  bias_monitor.py  budget_sentinel_base.py  build_tools_manager.py  deck_generator.py  deployment_manager.py  evidence_collector.py  evidence_summarizer.py  gemini_investor_reviewer.py  idea_ledger.py  interfaces.py  investor_scorer.py  models.py  search_tools.py  service_factory.py  service_registry.py  token_budget_sentinel.py
db/: bootstrap.sql
docs/: ADVANCED_SDLC_ENHANCEMENT_GUIDE.md  DEVELOPMENT.md  ENTERPRISE_SDLC_IMPLEMENTATION_SUMMARY.md  MANUAL_SETUP_CHECKLIST.md  ROADMAP.md  SDLC_IMPLEMENTATION_SUMMARY.md  SETUP_REQUIRED.md  api-documentation-v2.md  api-documentation.md  api-gateway-deployment.md  architectural-analysis.md  architecture-refinement-gap-analysis.md  architecture-update-2025.md  async-pipeline-migration-guide.md  claude-code-max-plan-setup.md  comprehensive-data-pipeline-specification.md  current-system-architecture.md  data-pipeline-domain-model.md  data-pipeline-requirements.md  deployment-guide.md  enhanced-system-architecture.md  gemini-investor-review-integration.md  integration-summary.md  onboarding_guide.md  operations-manual.md  performance-monitoring-guide.md  phase2-strategic-architecture-design.md  phase4-integration-summary.md  pipeline-specification-validation.md  system-architecture.md  testing-framework-architecture.md  user-guide.md  validation-architecture.md
examples/: claude_code_compute_demo.py  modularity_demo.py
k8s/: autonomous-sdlc-services.yaml
k8s/base/: hpa.yaml  (+11 more)
mlops/: experiment_tracking.py  mlflow-config.yml  model_versioning.py
monitoring/: agent_collaboration_monitor.py  alertmanager.yml  alerts-enhanced.yml  alerts.yml  blackbox-config.yml  business_metrics_dashboard.py  compliance_monitor.py  docker-compose.monitoring.yml  enterprise_metrics_collector.py  healthcheck-config.yml  jaeger-config.yml  loki-config.yml  mlops_monitor.py  otel-collector-config.yml  prometheus.yml  promtail-config.yml  sli-slo-definitions.yml  tracing-config.yml  tracing_instrumentation.py
pipeline/: __init__.py  demo_pipeline.py  main_pipeline.py  main_pipeline_async.py  performance_optimizer.py  telemetry.py
scripts/: advanced_performance_optimizer.py  architecture_review.py  build-optimized.sh  build.py  build.sh  build_loop.py  build_sbom.py  container_security_scan.sh  human_gate.py  idea.py  monitoring-setup.sh  monitoring_setup.py  perf_002_validation.py  performance_benchmark.py  quantum_performance_benchmark.py  quantum_security_scan.py  release.py  release.sh  run_build_cycle.py  run_comprehensive_tests.py  run_health_checks.py  run_pitch.py  run_smoke_test.py  security-scan.sh  security_scan.py  seed_idea.py  serve_api.py  setup_production_secrets.py  smoke_test.py  update_version.py  validate_deployment.py  validate_observability.py  validate_perf_002.py  validate_production_secrets.py
security/: runtime_security.py
smoke_test_landing_page/: README.md  package.json
smoke_tests/: analytics_log.jsonl
templates/: deck_template.marp  landing.html.j2
tests/: __init__.py  autonomous_sdlc_validation.py  chaos_testing_config.py  conftest.py  simple_validation_runner.py  sprint_acceptance_criteria.json  test_autonomous_enhancements.py  test_config_enhanced.py  test_debt_001_legacy_removal.py  test_framework_integration.py  test_health_comprehensive.py  test_implement-unit-tests-for-idea-model-and-cli.py  test_integrate-coverage-reports-and-ensure-80-coverage.py  test_loader.py  test_placeholder.py  test_set-up-pytest-and-coverage-infrastructure-for-testing-write-unit-tests-for-all-feature-modules.py  test_write-tests-for-architectureanalyzer-module.py
tools/: browser_search.py  cost_tracker.py  deckmatch_api.py  dittofeed_api.py  gpt_engineer_cli.py  gtm_loop.py  market_research.py  patent_view.py  python_interpreter.py  semantic_scholar.py  social_gpt_api.py  twitter_scrape.py  web_rag.py
workflows-to-add/: README.md  cd.yml  ci.yml
(+340 files in other folders)
